exports[`plugins > image > [tiptap] render image toolbar and settings #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 2,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 7,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 8,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 9,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "target": "_blank",
            "url": "www.wix.com"
          },
          "size": "fullWidth",
          "textWrap": "wrap"
        },
        "metadata": "",
        "src": {
          "file_name": "8bb438_131a7e1872bc45ec827bb61e56b840fe.jpg",
          "height": 3354,
          "id": "8bb438_131a7e1872bc45ec827bb61e56b840fe.jpg",
          "width": 2898
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "1": {
      "data": {
        "config": {
          "alignment": "center",
          "size": "content",
          "textWrap": "wrap"
        },
        "src": {
          "file_name": "8bb438_83e03311e53a47ce9ba8bda910fdad88.jpg",
          "height": 3526,
          "id": "8bb438_83e03311e53a47ce9ba8bda910fdad88.jpg",
          "width": 5177
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`plugins > image > [draft] render image toolbar and settings #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 2,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 7,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 8,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 9,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "rel": "",
            "target": "_blank",
            "url": "www.wix.com"
          },
          "showDescription": true,
          "showTitle": true,
          "size": "fullWidth",
          "spoiler": {},
          "textWrap": "wrap"
        },
        "disableDownload": false,
        "disableExpand": false,
        "metadata": {
          "caption": ""
        },
        "src": {
          "file_name": "8bb438_131a7e1872bc45ec827bb61e56b840fe.jpg",
          "height": 3354,
          "id": "036c6bf6cef5e4409848eb4eb6f80de1",
          "original_file_name": "8bb438_131a7e1872bc45ec827bb61e56b840fe.jpg",
          "width": 2898
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "1": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content",
          "textWrap": "wrap"
        },
        "src": {
          "file_name": "8bb438_83e03311e53a47ce9ba8bda910fdad88.jpg",
          "height": 3526,
          "id": "b12907da5fbb55a31a760e49fb0bb4e6",
          "original_file_name": "8bb438_83e03311e53a47ce9ba8bda910fdad88.jpg",
          "width": 5177
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`plugins > image > render image with link #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 1,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "target": "_blank",
            "url": "www.wix.com"
          },
          "size": "content",
          "textWrap": "wrap"
        },
        "src": {
          "file_name": "8bb438_ea26cc9ae0ce440bbc4cfaaa8864c5e6.jpg",
          "height": 2966,
          "id": "8bb438_ea26cc9ae0ce440bbc4cfaaa8864c5e6.jpg",
          "width": 4400
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`plugins > image > render image with link #1`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 1,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "rel": "noopener",
            "target": "_blank",
            "url": "www.wix.com"
          },
          "showDescription": true,
          "showTitle": true,
          "size": "content",
          "textWrap": "wrap"
        },
        "src": {
          "file_name": "8bb438_ea26cc9ae0ce440bbc4cfaaa8864c5e6.jpg",
          "height": 2966,
          "id": "d432d617a9f508cf404d64d8c489e1f1",
          "original_file_name": "8bb438_ea26cc9ae0ce440bbc4cfaaa8864c5e6.jpg",
          "width": 4400
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`plugins > image > [tiptap] render image with link #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 1,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "target": "_blank",
            "url": "www.wix.com"
          },
          "size": "content",
          "textWrap": "wrap"
        },
        "src": {
          "file_name": "8bb438_ea26cc9ae0ce440bbc4cfaaa8864c5e6.jpg",
          "height": 2966,
          "id": "8bb438_ea26cc9ae0ce440bbc4cfaaa8864c5e6.jpg",
          "width": 4400
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`plugins > image > [draft] render image with link #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 1,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "link": {
            "rel": "noopener",
            "target": "_blank",
            "url": "www.wix.com"
          },
          "showDescription": true,
          "showTitle": true,
          "size": "content",
          "textWrap": "wrap"
        },
        "src": {
          "file_name": "8bb438_ea26cc9ae0ce440bbc4cfaaa8864c5e6.jpg",
          "height": 2966,
          "id": "d432d617a9f508cf404d64d8c489e1f1",
          "original_file_name": "8bb438_ea26cc9ae0ce440bbc4cfaaa8864c5e6.jpg",
          "width": 4400
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`plugins > image > render image with loader - loading in component data #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 1,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content",
          "textWrap": "wrap"
        },
        "loading": true,
        "src": {
          "file_name": "8bb438_277609c27d9346c38d480b6da8237820.jpg",
          "height": 1280,
          "id": "17ef104520dd9a0711f1cc900d970b79",
          "original_file_name": "8bb438_277609c27d9346c38d480b6da8237820.jpg",
          "width": 1920
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`plugins > image > [draft] render image with loader - loading in component data #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 1,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content",
          "textWrap": "wrap"
        },
        "loading": true,
        "src": {
          "file_name": "8bb438_277609c27d9346c38d480b6da8237820.jpg",
          "height": 1280,
          "id": "17ef104520dd9a0711f1cc900d970b79",
          "original_file_name": "8bb438_277609c27d9346c38d480b6da8237820.jpg",
          "width": 1920
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`plugins > image > should disable image expand #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 2,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 7,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 8,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 9,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "size": "small",
          "textWrap": "wrap"
        },
        "disableExpand": true,
        "src": {
          "file_name": "8bb438_131a7e1872bc45ec827bb61e56b840fe.jpg",
          "height": 3354,
          "id": "8bb438_131a7e1872bc45ec827bb61e56b840fe.jpg",
          "width": 2898
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "1": {
      "data": {
        "config": {
          "alignment": "center",
          "size": "content",
          "textWrap": "wrap"
        },
        "src": {
          "file_name": "8bb438_83e03311e53a47ce9ba8bda910fdad88.jpg",
          "height": 3526,
          "id": "8bb438_83e03311e53a47ce9ba8bda910fdad88.jpg",
          "width": 5177
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`plugins > image > should disable image expand #1`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 2,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 7,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 8,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 9,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "small",
          "spoiler": {},
          "textWrap": "wrap"
        },
        "disableDownload": false,
        "disableExpand": true,
        "src": {
          "file_name": "8bb438_131a7e1872bc45ec827bb61e56b840fe.jpg",
          "height": 3354,
          "id": "036c6bf6cef5e4409848eb4eb6f80de1",
          "original_file_name": "8bb438_131a7e1872bc45ec827bb61e56b840fe.jpg",
          "width": 2898
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "1": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content",
          "textWrap": "wrap"
        },
        "src": {
          "file_name": "8bb438_83e03311e53a47ce9ba8bda910fdad88.jpg",
          "height": 3526,
          "id": "b12907da5fbb55a31a760e49fb0bb4e6",
          "original_file_name": "8bb438_83e03311e53a47ce9ba8bda910fdad88.jpg",
          "width": 5177
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`plugins > image > [tiptap] should disable image expand #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 2,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 7,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 8,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 9,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "size": "small",
          "textWrap": "wrap"
        },
        "disableExpand": true,
        "src": {
          "file_name": "8bb438_131a7e1872bc45ec827bb61e56b840fe.jpg",
          "height": 3354,
          "id": "8bb438_131a7e1872bc45ec827bb61e56b840fe.jpg",
          "width": 2898
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "1": {
      "data": {
        "config": {
          "alignment": "center",
          "size": "content",
          "textWrap": "wrap"
        },
        "src": {
          "file_name": "8bb438_83e03311e53a47ce9ba8bda910fdad88.jpg",
          "height": 3526,
          "id": "8bb438_83e03311e53a47ce9ba8bda910fdad88.jpg",
          "width": 5177
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`plugins > image > [draft] should disable image expand #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. ",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 0,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 2,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 6,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [
        {
          "key": 1,
          "length": 1,
          "offset": 0
        }
      ],
      "inlineStyleRanges": [],
      "key": 7,
      "text": " ",
      "type": "atomic"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 8,
      "text": "",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 9,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {
    "0": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "small",
          "spoiler": {},
          "textWrap": "wrap"
        },
        "disableDownload": false,
        "disableExpand": true,
        "src": {
          "file_name": "8bb438_131a7e1872bc45ec827bb61e56b840fe.jpg",
          "height": 3354,
          "id": "036c6bf6cef5e4409848eb4eb6f80de1",
          "original_file_name": "8bb438_131a7e1872bc45ec827bb61e56b840fe.jpg",
          "width": 2898
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    },
    "1": {
      "data": {
        "config": {
          "alignment": "center",
          "showDescription": true,
          "showTitle": true,
          "size": "content",
          "textWrap": "wrap"
        },
        "src": {
          "file_name": "8bb438_83e03311e53a47ce9ba8bda910fdad88.jpg",
          "height": 3526,
          "id": "b12907da5fbb55a31a760e49fb0bb4e6",
          "original_file_name": "8bb438_83e03311e53a47ce9ba8bda910fdad88.jpg",
          "width": 5177
        }
      },
      "mutability": "IMMUTABLE",
      "type": "wix-draft-plugin-image"
    }
  }
};

exports[`plugins > viewerToolbar > render viewer toolbar and tweet #0`] =
{
  "blocks": [
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 0,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 2,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 1,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 1,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 2,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 3,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 4,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 5,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test.",
      "type": "unstyled"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 8,
          "offset": 0,
          "style": "BOLD"
        },
        {
          "length": 10,
          "offset": 91,
          "style": "UNDERLINE"
        }
      ],
      "key": 6,
      "text": "Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 1,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 7,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 1,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 89,
          "offset": 0,
          "style": "{\"FG\":\"#212121\"}"
        },
        {
          "length": 7,
          "offset": 18,
          "style": "BOLD"
        }
      ],
      "key": 8,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 7,
          "offset": 29,
          "style": "UNDERLINE"
        }
      ],
      "key": 9,
      "text": "At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution.",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 1,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 78,
          "offset": 0,
          "style": "{\"FG\":\"color4\"}"
        }
      ],
      "key": 10,
      "text": "Bring to the table win-win survival strategies to ensure proactive domination.",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 89,
          "offset": 0,
          "style": "{\"FG\":\"#212121\"}"
        }
      ],
      "key": 11,
      "text": "Capitalize on low hanging fruit to identify a ballpark value added activity to beta test.",
      "type": "ordered-list-item"
    },
    {
      "data": {},
      "depth": 1,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 12,
      "text": "Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [
        {
          "length": 18,
          "offset": 9,
          "style": "{\"BG\":\"color4\"}"
        }
      ],
      "key": 13,
      "text": "Override the digital divide with additional clickthroughs from DevOps.",
      "type": "unordered-list-item"
    },
    {
      "data": {},
      "depth": 0,
      "entityRanges": [],
      "inlineStyleRanges": [],
      "key": 14,
      "text": "",
      "type": "unstyled"
    }
  ],
  "documentStyle": {},
  "entityMap": {}
};
